# purchase-in-session-analysis

./: README.md  pyproject.toml  requirements.txt
config/: LogConfig.py
logs/: ab_predictions.csv
microservice/: main.py
microservice/routers/: default_router.py
models/: .gitignore  naive_model.ipynb
models/naive_model/: naive_model.ipynb
notebooks/: Explore_data.ipynb  Explore_products.ipynb
notebooks/ab/: ab.ipynb
notebooks/data_exploration/: data_preprocessing.ipynb  final_data_analysis.ipynb  product_analysis.ipynb  session_analysis.ipynb  user_analysis.ipynb  user_product_analysis.ipynb
notebooks/model_selection/: model_selection.ipynb
reports/: implementation_documentation.ipynb  problem_definition.ipynb
session_purchase/data/: make_dataset.py
session_purchase/models/: train_model.py
session_purchase/models/advanced_model/: predict_model.py  train_model.py
session_purchase/models/naive_model/: NaiveModel.py  test_NaiveModel.py
session_purchase/models/neural_network/: predict_model.py  train_model.py
session_purchase/models/random_forest/: predict_model.py  train_model.py
session_purchase/visualization/: visualize.py
tests/: microservice_test.py  test_NaiveModel.py  test_make_dataset.py  test_predict_model.py
