[tool.poetry]
name = "session_purchase"
version = "0.1.0"
description = "Analysis and prediction of purchase in client's session."
authors = [
    "Łukasz Staniszewski <lukasz.staniszewski.stud@pw.edu.pl>",
    "Bartosz Cywiński <bartosz.cywinski.stud@pw.edu.pl>"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
ipykernel = "^6.4.1"
jupyter = "^1.0.0"
pytest = "^6.2.5"
qgrid = "^1.3.1"
black = "^21.11b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
